@@ -1,3 +1,8 @@
+2004-10-06  Graydon Hoare  <graydon@redhat.com>
+
+	* jni/gtk-peer/gnu_java_awt_peer_gtk_GdkGraphics2D.c 
+	(install_font_peer): Minor bug fixes to track cairo font semantics.
+
 2004-10-04  Jerry Quinn  <jlquinn@optonline.net>
 
 	* java/awt/image/BufferedImageFilter.java: Implement.
